--- a/VanKroy/Data/style.css
+++ b/VanKroy/Data/style.css
@@ -3,7 +3,7 @@
     padding: 0;
   }
 #banner {
-    background-image: url(https://i.imgur.com/oX2Ljfh.png);
+    background-image: url(https://images.unsplash.com/photo-1502134249126-9f3755a50d78?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80);
     font-family: 'Water Brush', cursive;
     font-size: 45px;
     text-shadow: rgb(231, 134, 250) 1px 0 15px;
@@ -56,7 +56,7 @@ h2 {
 }
 .grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px;
     margin: 30px 0;
 }
@@ -76,7 +76,7 @@ h2 {
 .swgrid {
     color: #ffffff;
     display: grid;
-    grid-template-columns: 250px 250px 250px;
+    grid-template-columns: 250px 250px;
     grid-gap: 50px;
     margin-top: 20px;
     margin-bottom: 20px;
